--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ Free slots: <span id="empty-slots-count"></span>
 
 
 
-<svg style="display:none">
+<svg style="position:absolute;visibility:hidden">
   <filter id="pixelate" x="0" y="0">
     <feFlood x="0" y="0" height="1" width="1" result="flood"></feFlood>
     <feComposite width="3" height="3" in="flood" result="composite"></feComposite>
@@ -549,9 +549,6 @@ Free slots: <span id="empty-slots-count"></span>
     </filter>
   </defs>
 </svg>
-
-
-
 
 
 
