--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 
- 
+ <script src="libraries/v3d.js"></script>
+<script src="libraries/boundingbox.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa+Ink:wght@400;700&display=swap" rel="stylesheet">
@@ -332,6 +333,8 @@ Free slots: <span id="empty-slots-count"></span>
 
 
 
+
+<script src="svg.js"></script>
 <script src="group_panel.js"></script>
 <script src="settings.js"></script>
   <script src="script.js"></script>
@@ -554,6 +557,13 @@ Free slots: <span id="empty-slots-count"></span>
 </svg>
 
 
+
+
+<div id="svg-viewer">
+<div id="Scene1Container" style="user-select:none">
+<svg id="Scene1" width="500" height="400" style="width:500px; height:400px"></svg>
+</div>
+</div>
 
 
 
